fixed some old borders and spacing stuff

--- a/source/css/the.scss
+++ b/source/css/the.scss
@@ -183,9 +183,9 @@ textarea {
   margin: 0;
   a {
     color: $white !important;
-    border-bottom: 1px solid $blue;
+    border-bottom: 0px;
     &:hover {
-      border-bottom: 1px solid $white;
+      border-bottom: 0px;
     }
   }
 }
@@ -226,7 +226,7 @@ nav {
     display: block;
     // margin-bottom: 10px;
     padding: 12px 0;
-    padding-left: 10%;
+    // padding-left: 10%;
     text-align: center;
     font-weight: bold;
     vertical-align: middle;
